# arguments

./: .gitignore  README.md  pyproject.toml
arguments/: __init__.py  api.py
tests/: test_arguments.py  test_bound_arguments.py
