[tool.poetry]
name = "arguments"
version = "0.1.3"
description = "Arguments manager"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
