[tool.poetry]
name = "tombulled-arguments"
version = "0.1.5"
description = "Arguments manager"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
packages = [
	{include = "arguments"}
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
